<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_selector"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/txt_select"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_single"
        android:textColor="@color/white"
        android:onClick="startArcade"
        android:background="@drawable/buttonshape"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/btn_multi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_multi"
        android:textColor="@color/white"
        android:onClick="startLogin"
        android:background="@drawable/buttonshape"
         />


</LinearLayout>