<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
 >

    <RelativeLayout
        android:id="@+id/lyt_ai"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <LinearLayout
            android:id="@+id/lyt_ai_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:gravity="center" >
            
            <ImageView
                android:id="@+id/img_lizard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/lizard_desc"
                android:src="@drawable/lizard" />

            <ImageView
                android:id="@+id/img_spock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/spock_desc"
                android:src="@drawable/spock" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_ai_dn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyt_ai_up"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center" >
            
            <ImageView
                android:id="@+id/img_rock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rock_desc"
                android:src="@drawable/rock" />

            <ImageView
                android:id="@+id/img_paper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/paper_desc"
                android:src="@drawable/paper" />

            <ImageView
                android:id="@+id/img_scissors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/scissors_desc"
                android:src="@drawable/scissors" />
            
        </LinearLayout>

        <TextView
            android:id="@+id/txt_ai_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/ai_score"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lyt_player"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_player_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/player_score"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/lyt_player_dn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/img_lizard_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/lizard_desc"
                android:src="@drawable/lizard"
                android:background="@null" />

            <ImageButton
                android:id="@+id/img_spock_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/spock_desc"
                android:src="@drawable/spock"
                android:background="@null" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_player_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lyt_player_dn"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/img_rock_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rock_desc"
                android:src="@drawable/rock"
                android:background="@null" />

            <ImageButton
                android:id="@+id/img_paper_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/paper_desc"
                android:src="@drawable/paper"
                android:background="@null" />

            <ImageButton
                android:id="@+id/img_scissors_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/scissors_desc"
                android:src="@drawable/scissors"
                android:background="@null" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>